# nota-bene-backend

./: .env.template  .flake8  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 215b371c2aac_.py  7cc33fb290c1_.py  aa9aab9fb65e_.py  cf9273b97e84_.py  d36c610472e7_.py
app/: __init__.py  main.py  routes.py
app/db/: __init__.py  base.py  db_client.py
app/models/: main.py
webapp/: __init__.py  routes.py
webapp/core/: utils.py
webapp/db/: db_client.py
webapp/models/: collector.py  main.py
