[tool.poetry]
name = "nota-bene-backend"
version = "0.1.0"
description = "Backend for simple todo application"
authors = ["RudeZwloki7 <rudezwloki7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
PyJWT = "^2.3.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
